css/common.css
:root{
    --teal:#2ec1ac;
    --teal_hover:#279e8c;
}


*{
    font-family: "Poppins", sans-serif;
}
.h-font {
    font-family: "Merienda", cursive;
}
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
/* Firefox */
input[type=number] {
    -moz-appearance: textfield;
}
.custom-bg {
    background-color: var(--teal);
    border: 1px solid var(--teal_hover);
}
.custom-bg:hover {
    background-color: var(--teal_hover);
    border-color:var(--teal_hover);
}

.h-line{
    width: 150px;
    margin: 0 auto;
    height: 1.7px;
}

